--- a/README
+++ b/README
@@ -15,3 +15,5 @@ This is a simple Library Management System built with Django. It allows a librar
    ```sh
    git clone <repository-url>
 ![screenshot](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175104.png)
+1[screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175207.png)
+
