--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Library Management System
+!# Library Management System
 
 ## Overview
 This is a simple Library Management System built with Django. It allows a librarian to manage books, members, and transactions.
@@ -16,4 +16,5 @@ This is a simple Library Management System built with Django. It allows a librar
    git clone <repository-url>
 ![screenshot](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175104.png)
 1[screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175207.png)
+![screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175824.png)
 
