--- a/README
+++ b/README
@@ -17,4 +17,6 @@ This is a simple Library Management System built with Django. It allows a librar
 ![screenshot](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175104.png)
 1[screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175207.png)
 ![screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-06-05%20005840.pngHOME.png)
-![screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%20lb2024-06-05%20005427.png4.png)
+![screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%20lbr-05%20004848.png)
+![screenshot](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%20lbr-05%20004848.png)
+
