--- a/README
+++ b/README
@@ -15,8 +15,8 @@ This is a simple Library Management System built with Django. It allows a librar
    ```sh
    git clone <repository-url>
 ![screenshot](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175104.png)
-1[screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175207.png)
-![screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-06-05%20005840.pngHOME.png)
-![screenshort](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%20lbr-05%20004848.png)
+![screenshot](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-05-31%20175207.png)
+![screenshot](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%202024-06-05%20005840.pngHOME.png)
+![screenshot](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%20lbr-05%20004848.png)
 ![screenshot](https://github.com/Yuelin2030/library-management-system/blob/master/Screenshot%20lbr-05%20004848.png)
 
